--- a/ingress-nginx/base/service.yaml
+++ b/ingress-nginx/base/service.yaml
@@ -9,6 +9,8 @@ metadata:
     app.kubernetes.io/version: 1.6.4
   name: ingress-nginx-controller
   namespace: ingress-nginx
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
 spec:
   externalTrafficPolicy: Local
   ipFamilies:
@@ -25,8 +27,6 @@ spec:
       port: 443
       protocol: TCP
       targetPort: https
-  externalIPs:
-    - 52.79.43.18
   selector:
     app.kubernetes.io/component: controller
     app.kubernetes.io/instance: ingress-nginx
