--- a/backend/syncd-service.yaml
+++ b/backend/syncd-service.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: syncd-backend
-        image: 
+        image: jayoh712/syncd:latest
         ports:
         - containerPort: 8080
