--- a/backend/syncd-service.yaml
+++ b/backend/syncd-service.yaml
@@ -1,19 +1,13 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Service
 metadata:
-  name: syncd-backend
+  name: syncd-backend-service
 spec:
-  replicas: 1
+  type: NodePort
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+    nodePort: 30080  
   selector:
-    matchLabels:
-      app: syncd-backend
-  template:
-    metadata:
-      labels:
-        app: syncd-backend
-    spec:
-      containers:
-      - name: syncd-backend
-        image: jayoh712/syncd:latest
-        ports:
-        - containerPort: 8080
+    app: syncd-backend
