--- a/cert-issuer/letsencrypt-prod.yaml
+++ b/cert-issuer/letsencrypt-prod.yaml
@@ -1,16 +1,20 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-prod
+  name: le-wildcard-issuer
 spec:
   acme:
-    email: ajoufesta@gmail.com
-    server: https://acme-v02.api.letsencrypt.org/directory
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    email: dlckswn334@ajou.ac.kr
     privateKeySecretRef:
-      name: letsencrypt-prod
+      name: le-wildcard-issuer
     solvers:
       - dns01:
-          cloudflare:
-            apiTokenSecretRef:
-              name: cloudflare-api-token-secret
-              key: api-token
+          route53:
+            region: ap-northeast-2
+            accessKeyIDSecretRef:
+              name: aws-route53-creds
+              key: access-key
+            secretAccessKeySecretRef:
+              name: aws-route53-creds
+              key: secret-access-key
