--- a/cert-issuer/dev.yaml
+++ b/cert-issuer/dev.yaml
@@ -24,3 +24,17 @@ spec:
     kind: ClusterIssuer
     name: le-wildcard-issuer
   secretName: wildcard-idear-cert
+
+---
+
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: idear-dev-wildcard-cert
+spec:
+  dnsNames:
+    - '*.dev.i-dear.org'
+  issuerRef:
+    kind: ClusterIssuer
+    name: le-wildcard-issuer
+  secretName: wildcard-idear-cert
