feat: ingress class

--- a/ingress-nginx/base/service.yaml
+++ b/ingress-nginx/base/service.yaml
@@ -10,7 +10,7 @@ metadata:
   name: ingress-nginx-controller
   namespace: ingress-nginx
   annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
 spec:
   externalTrafficPolicy: Local
   ipFamilies:
