--- a/ingress-nginx/base/service.yaml
+++ b/ingress-nginx/base/service.yaml
@@ -9,6 +9,9 @@ metadata:
     app.kubernetes.io/version: 1.6.4
   name: ingress-nginx-controller
   namespace: ingress-nginx
+  annotations:
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/backend-protocol: HTTPS 
 spec:
   externalTrafficPolicy: Local
   ipFamilies:
