--- a/route-rules/argocd.yaml
+++ b/route-rules/argocd.yaml
@@ -15,8 +15,8 @@ kind: Ingress
 metadata:
   name: argocd-ingress
   annotations:
-    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+  IngressClass: nginx
 spec:
   tls:
     - hosts:
