--- a/route-rules/argocd.yaml
+++ b/route-rules/argocd.yaml
@@ -16,6 +16,7 @@ metadata:
   name: argocd-ingress
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    kubernetes.io/ingress.class: "nginx"
 spec:
   tls:
     - hosts:
