--- a/route-rules/argocd.yaml
+++ b/route-rules/argocd.yaml
@@ -15,7 +15,6 @@ kind: Ingress
 metadata:
   name: argocd-ingress
   annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
     kubernetes.io/ingress.class: "nginx"
 spec:
   tls:
@@ -30,6 +29,7 @@ spec:
             path: /
             backend:
               service:
-                name: argocd-external
+                name: argocd-server
                 port:
                   number: 80
+
