--- a/route-rules/argocd.yaml
+++ b/route-rules/argocd.yaml
@@ -14,6 +14,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: argocd-ingress
+  namespace: argocd
   annotations:
     kubernetes.io/ingress.class: "nginx"
 spec:
