--- a/route-rules/argocd.yaml
+++ b/route-rules/argocd.yaml
@@ -14,7 +14,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: argocd-ingress
-  namespace: argocd
+  namespace: ingress-nginx
   annotations:
     kubernetes.io/ingress.class: "nginx"
 spec:
