--- a/cert-issuer/kustomization.yaml
+++ b/cert-issuer/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - letsencrypt-prod.yaml
+  # - letsencrypt-prod.yaml
   - dev.yaml
