feat: ingressclass nginx

--- a/route-rules/argocd.yaml
+++ b/route-rules/argocd.yaml
@@ -30,7 +30,7 @@ spec:
             path: /
             backend:
               service:
-                name: argocd-server
+                name: argocd-external
                 port:
                   number: 80
 
