--- a/route-rules/argocd.yaml
+++ b/route-rules/argocd.yaml
@@ -16,6 +16,7 @@ metadata:
   name: argocd-ingress
   namespace: ingress-nginx
   annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: "nginx"
 spec:
   tls:
