--- a/route-rules/argocd.yaml
+++ b/route-rules/argocd.yaml
@@ -17,6 +17,7 @@ metadata:
   namespace: ingress-nginx
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   tls:
     - hosts:
