--- a/route-rules/sonaqube.yaml
+++ b/route-rules/sonaqube.yaml
@@ -20,10 +20,10 @@ metadata:
 spec:
   tls:
     - hosts:
-        - sonaqube.dev.ajoufesta.com
-      secretName: wildcard-ajoufesta-cert
+        - sonaqube.dev.i-dear.org
+      secretName: wildcard-dev-idear-cert
   rules:
-    - host: sonaqube.dev.ajoufesta.com
+    - host: sonaqube.dev.i-dear.org
       http:
         paths:
           - pathType: Prefix
