--- a/ingress-nginx/base/service.yaml
+++ b/ingress-nginx/base/service.yaml
@@ -10,6 +10,8 @@ metadata:
   name: ingress-nginx-controller
   namespace: ingress-nginx
 spec:
+  annotation: 
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
   externalTrafficPolicy: Local
   ipFamilies:
     - IPv4
