--- a/ingress-nginx/base/service.yaml
+++ b/ingress-nginx/base/service.yaml
@@ -7,11 +7,12 @@ metadata:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
     app.kubernetes.io/version: 1.6.4
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
   name: ingress-nginx-controller
   namespace: ingress-nginx
 spec:
   annotation: 
-    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
   externalTrafficPolicy: Local
   ipFamilies:
     - IPv4
