--- a/route-rules/grafana.yaml
+++ b/route-rules/grafana.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sonaqube-external
+  name: grafana-external
   namespace: ingress-nginx
 spec:
   type: ExternalName
-  externalName: sonarqube-sonarqube.sonarqube.svc.cluster.local
+  externalName: grafana.tracing.svc.cluster.local
   ports:
     - port: 80
 
@@ -13,23 +13,25 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: sonaqube-ingress
+  name: grafana-ingress
+  namespace: ingress-nginx
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   tls:
     - hosts:
-        - sonaqube.dev.i-dear.org
+      - grafana.dev.i-dear.org
       secretName: wildcard-dev-idear-cert
   rules:
-    - host: sonaqube.dev.i-dear.org
+    - host: grafana.dev.i-dear.org
       http:
         paths:
           - pathType: Prefix
             path: /
             backend:
               service:
-                name: sonaqube-external
+                name: grafana-external
                 port:
                   number: 80
+
