--- a/backend/syncd-deployment.yaml
+++ b/backend/syncd-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: syncd-backend
-        image: jayoh712/syncd:latest
+        image: dlckswn334/sync-d-backend:latest
         ports:
         - containerPort: 8080
