--- a/backend/syncd-deployment.yaml
+++ b/backend/syncd-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: syncd-backend
-          image: "dlckswn334/sync-d-backend:4a53a063b3dfb8845a8197b89d325a9bcb780c45"
+          image: "dlckswn334/sync-d-backend:latest"
           ports:
             - containerPort: 8080
