--- a/backend/syncd-deployment.yaml
+++ b/backend/syncd-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: syncd-backend
-          image: "dlckswn334/sync-d-backend:latest"
+          image: "dlckswn334/sync-d-backend:6db3549649f7b2a12331ee213e07459ff350d9d8"
           ports:
             - containerPort: 8080
