--- a/backend/syncd-deployment.yaml
+++ b/backend/syncd-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: syncd-backend
-          image: "dlckswn334/sync-d-backend:latest"
+          image: "dlckswn334/sync-d-backend:34b4260b9f50cedf10ff2106f78bc20b1424b556"
           ports:
             - containerPort: 8080
