--- a/route-rules/kustomization.yaml
+++ b/route-rules/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 resources:
   - argocd.yaml
   - syncd-backend.yaml
-  - grafana.yaml
+  # - grafana.yaml
   - syncd-dev-backend.yaml
   # - sonaqube.yaml
