--- a/backend/syncd-deployment.yaml
+++ b/backend/syncd-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: syncd-backend
-          image: "dlckswn334/sync-d-backend:a8b9c3327e5d233abdd731a48a8bacc9a6b13a60"
+          image: "dlckswn334/sync-d-backend:prod"
           ports:
             - containerPort: 8080
