--- a/backend/syncd-deployment.yaml
+++ b/backend/syncd-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: syncd-backend
-          image: "dlckswn334/sync-d-backend:prod"
+          image: "dlckswn334/sync-d-backend:e3d0dfc1f184e2a2e9541a2cb23617b376fe8600"
           ports:
             - containerPort: 8080
