--- a/route-rules/syncd-admin.yaml
+++ b/route-rules/syncd-admin.yaml
@@ -31,7 +31,7 @@ spec:
             path: /
             backend:
               service:
-                name: syncd-dev-backend-external
+                name: syncd-admin-external
                 port:
                   number: 80
 
